src/styles.scss
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
body,html {
    background: #131313;
    color: #2f3138;
    font-family: "Open Sans", sans-serif;
    width: 100%;
    height: 100%;
    overflow: hidden;
    background-image:  url('./assets/bg.jpg');
    background-size: 100%;
    background-position: center;
    background-repeat: no-repeat;
  }
  *{
    font-family: 'Poppins', sans-serif;
  }
  .purple{
    color: magenta !important;
  }
  .larger{
    width: 100% !important;
    height: 400px;
  }
  a{
    text-decoration: none;
    color: inherit;
  }
  .addStar{
    background: #3f51b5;
    color: #fff;
    border: none;
    padding: 3px 11px;
    display: inline-flex;
    justify-content: center;
    align-items: center;
    margin-left: 25px;
    img{
      
    padding: 0px;
    margin-left: 10px;

    }
  }

  /* width */
  ::-webkit-scrollbar {
    width: 10px;
  }
  
  /* Track */
  
    ::-webkit-scrollbar-track {
    background: #f1f1f1; 
  }
  
  /* Handle */
  
    ::-webkit-scrollbar-thumb {
    background: #888; 
  }
  
    
  /* Handle on hover */
  ::-webkit-scrollbar-thumb:hover {
    
    background: #555; 
  } 
//Header
.topBar {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  background: rgb(0 0 0 / 68%);
  height: 70px;
  display: flex;
  align-items: center;
}

.topBar .toggle {
  min-width: 150px;
  text-align: center;
  color: #fff;
  font-size: 20px
}

.topBar .logo {
  max-height: 90%;
}

.information {
  position: fixed;
  bottom: 0px;
  right: 39px;
  color: #fff;
  width: 235px;
  display: none
}

.information p {
  font-size: 12px;
  line-height: 19px;
  text-align: left;
  text-shadow: 1px -1px 1px #000;
  list-style: list;
}

.information i {
  margin-right: 4px;
  margin-top: 20px;
  color: red
}

.connect {
  position: fixed;
  right: 10px;
  top: 10px;
  z-index: 9999;
}

.connect button {
  background: #a21119;
  color: #fff;
  border: none;
  box-shadow: 0px 0px 7px -1px #000;
  padding: 10px 20px;
  border-radius: 9px;
  font-size: 12px;
  text-transform: uppercase;
  font-weight: bold;
}

.connect button i {
  margin-right: 10px;
}

.disconnect {
  position: fixed;
  right: 10px;
  top: 10px;
  z-index: 9999;
}

.disconnect button {
  background: #007510;
  color: #fff;
  border: none;
  box-shadow: 0px 0px 7px -1px #000;
  padding: 10px 20px;
  border-radius: 9px;
  font-size: 12px;
  text-transform: uppercase;
  font-weight: bold;
}

.disconnect button i {
  margin-right: 10px;
}

.ele {
  position: fixed;
  bottom: 0;
  left: 0;
}

.ele .token {
  display: flex;
  justify-content: flex-end;
  align-items: flex-end;
}

.ele .token img {
  width: 118px;
  position: relative;
  bottom: -18px;
}

.ele .token span {
  font-size: 17px;
  color: #fff;
  padding: 5px 18px;
  box-shadow: 0px 0px 7px -2px #fff;
}

.sideBar {
  position: fixed;
  top: 70px;
  left: 0;
  z-index: 9999;
  display: flex;
  justify-content: center;
  align-items: flex-start;
  height: calc(100% - 120px);
  background: rgb(0 0 0 / 78%);
  width: 155px;
}

.sideBar ul {
  width: 100%;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  height: calc(100% - 70px);
  margin: 0;
  flex-direction: column;
  margin: 0;
  padding: 0;
  padding-top: 20px
}

.sideBar li {
  list-style: none;
  color: #fff;
  padding: 10px 15px;
  margin: 10px;
  /* border: 1px solid #ddd; */
  font-size: 11px;
  box-shadow: 0px 2px 2px -1px rgb(255 255 255 / 37%);
  display: flex;
  flex-direction: row;
  min-width: 100%;
  display: flex;
  justify-content: flex-start;
  align-items: center;
  margin: 0;
  height: 57px;
}

.sideBar .active {
  border-left: 4px solid purple;
}

.telegram{
  color:#2196f3;
}

a:hover{
  color: purple;
  fill: purple;
}

.sideBar li span {
  margin-top: 5px
}

.sideBar li img {
  width: 30px;
  margin-right: 10px;
  filter: grayscale(100%);
}

.earning{
  position: fixed;
  bottom: 0;
  left: 0;
  color: #040304;
  height: 50px;
  width: 155px;
  text-align: center;
  background: rgb(0 0 0 / 78%);
  padding: 9px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-wrap: nowrap;
  font-size: 12px;
  color: #fff;
  border-top: 1px solid rgba(204, 204, 204, 0.315);
  fill: rgba(255, 255, 255, 0.644);
  div{
    display: flex;
    min-width: 45%;
    color: #fff;
    fill: rgba(255, 255, 255, 0.644);
    margin: 5px 2px;
    justify-content: space-evenly;
    align-items: center;
    padding: 4px;
    cursor: pointer;
  }
  div:hover{
    color: purple;
    fill: purple;
  }
}

.earning div:nth-child(1){
  font-size: 14px;
}

#scene,
.fw,
#app {
  width: 100%;
  height: 100%
}

.m1 {
  display: flex !important;
  justify-content: flex-end;
  align-items: flex-start;
  position: fixed;
  left: 0;
  top: 0
}

.m1 img {
  width: 200px;
  position: relative;
  top: 100px;
  right: 100px;
}

.m2 {
  display: flex !important;
  justify-content: flex-start;
  align-items: flex-end;
  position: fixed;
  left: 0;
  top: 0
}

.m2 img {
  width: 200px;
  position: relative;
  bottom: 100px;
  left: 100px;
}
.account{
  color: #fff;
  font-size: 11px;
  /* background: rgba(17, 13, 37, 0.65); */
  padding: 10px;
  text-align: center;
  padding: 15px;
  position: fixed;
  top: 0px;
  left: 50px;
  width: 100%;
} 
canvas{
  width: 100% !important;
  height: 100% !important;
  position: fixed;
  left: 0;
  top: 0;
}
.sub-heading{
  text-align: center;
  color: #fff;
  text-shadow: 1px 1px 1px #c21616;
  font-size: 32px;
  margin: 15px;
}
.container{
  position: relative;
  margin-top: 23px;
  display: flex;
  flex-wrap: wrap;
  z-index: 99999;
  justify-content: center;
}

.container .card{
  position: relative;
  width: 320px;
  background: rgb(35 35 35 / 51%);
  border-radius: 20px;
  overflow: hidden;
  margin: 10px;
  padding-bottom: 20px;
  //justify-content: center;
}
.container .card2{
  position: relative;
  width: 1600px;
  background: rgb(35 35 35 / 51%);
  border-radius: 20px;
  overflow: hidden;
  margin: 10px;
  padding-bottom: 20px;
  text-align: center;
  color:#fff;
}

.card{
  // position:fixed;
  // top:10px;
  .headings{
    // position:fixed;
    // top:10px;
    font-size: 20px;
    padding: 20px;
    color: #fff;
    height: 150px;
    line-height: 32px;
    text-align: center;
    line-height: 48px;
    font-size: 34px;
    width: 100%;
    cursor: pointer;
  }
  .icon{
    // position:relative;
    // top:10px;
    padding: 20px;
    color:#fff;
    img{
      width: 40px;
      margin-right: 10px;
    }
  }
  .input{
    text-align: center;
    color:#fff;
    .checkbox{
      transform: scale(1.5);
    }
  }
  .input[type=checkbox] {
    transform: scale(2);
  }
  .grid{
    // position:relative;
    // top:10px;
    color:#fff;
    display: flex;
    justify-content: space-between;
    padding: 2px 10px;
    align-items: flex-start;
    .label{
      font-size: 15px;
    }
    .colored{
      color:rgb(255, 255, 255);
      font-size: 20px;
    }
    .large-text{
      font-size: 20px;
    }
    .sm-text{
      font-size: 14px !important;
      width: 100%;
    }
    .cont{
      font-size: 18px;
      display: flex;
      flex-direction: column;
      padding-right: 10px;
      button{
        background: #fff;
        color:#000;
        margin: 10px;
        border-radius: 10px;
        padding: 7px 12px;
        font-size: 12px;
        margin-right: 20px;
      }
    }
  }
  button{
    border: 1px solid grey;
    background: purple;
    color: #fff;
    padding: 10px;
    cursor: pointer;
    width: 100%;
  }
  .btn-sm{
    background: none;
    color: white;
    font-weight: bold;
    cursor: pointer;
  }
  hr{
    border: 1px solid #ccc;
  }
}
.fgVjtZ svg {
  fill: rgb(143, 128, 186);
}
.eNHRIG {
  fill: #fff;
  flex-shrink: 0;
  margin-right: 8px;
}
 //Home Page 
 #main {
  position: fixed;
  top: 70px;
  left: 155px;
  height: calc(100vh - 70px);
  width: calc(100% - 155px);
  z-index: 9999;
  background: #0000;
  padding: 20px;
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
  overflow: auto;
  padding-top: 10px;
  padding-left: 0;
  padding-right: 0;
}

.content {
  width: 100%;
  heading: 100%;
  overflow: auto;
}

.content h6 {
  color: #fff;
  line-height: 32px;
  text-align: center;
  margin-top: 22px;
  text-shadow: 1px 1px 4px #000
}

.heading {
  color: #fff;
  width: 100%;
  font-size: 60px;
  margin: 0;
  text-align: center;
  text-shadow: 1px 1px 1px #000;
}

.sm-heading {
  margin: 0;
  padding: 0;
  color: #fff;
  letter-spacing: 5px;
  font-size: 35px;
  margin-left: 10px;
  text-align: center;
  margin-bottom: 20px;
  text-shadow: 1px 1px 1px #000;
}

//Media quries
@media (max-width: 991px){
  body{
    background-size: auto;
  }
  .account{
    background: rgba(17, 13, 37, 0.65); 
    position: relative;
  }
  .topBar .toggle {
      min-width: 64px;
  }
  .sideBar{
    transform: translateX(-100%);
    transition: all 500ms;
    z-index: 9999;
    height: calc(100% - 69px);
    top:69px;
    width: 60%;
  }
  .earning{
    width: 100%;
  }
  .addStar {
    margin-top: 10px;
  }
  #main {
    left: 0;
    width: 100%;
    z-index: 8888;
  }
  .showMenu{
    transform: translateX(0%);
  }
}
#walletconnect-wrapper{
  z-index: 9999;
  position: relative;
}
.messages{
  position: fixed;
  width: 100%;
  height: 100%;
  z-index: 99999;
  display: flex;
  justify-content: center;
  align-items: flex-end;
  background: rgba(0, 0, 0, 0.43);
  left: 0;
  top: 0;
  h4{
    padding: 15px;
    background: #2196f3;
    color: #fff;
    text-align: center;
    width: auto;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 20px;
  }
}
.pops{
  position: fixed;
    left: 0;
    top: 0;
    z-index: 99999;
    display: flex;
    justify-content: center;
    align-items: center;
    background: rgb(0 0 0 / 66%);
    width: 100%;
    height: 100%;
    flex-direction: column;
  .head{
    width: 400px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    background: #9c27b0;
    padding: 15px;
    color: #fff;
    text-transform: uppercase;
    h6{
      
        margin: 0;
        padding: 0;

    }
    i{

    }
  }
  .cont{
    width: 400px;
    background: #fff;
    padding: 13px 15px;
    font-size: 11px;
   li{
         list-style: none;
    font-size: 10px;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 9px 0px;
    margin-bottom: 5px;
    background: #eee;
    padding: 10px;
    cursor: pointer;
     h4{
      margin: 0;
      font-size: 13px;

     }
     img{
        width: 50px;
     }
   } 
  }
}

